<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.com.etn.myapplicationvistas.PerfilActivity"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_marginLeft"
    android:layout_marginEnd="@dimen/activity_marginRight"
    android:layout_marginStart="@dimen/activity_marginStart"
    android:layout_marginTop="@dimen/activity_marginTop"
    android:weightSum="1"


    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"


        >
        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_marginTop"
            />
        <TextView
            android:id="@+id/txtUsernameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtactivity_perfil_username"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_below="@id/imgProfile"
            android:layout_centerHorizontal="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/txtUsernameProfile"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.33"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_like_border_black_24dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_perfil_like"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.33"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_people_black_24dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_perfil_followers"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.33"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fallow_black_24dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_perfil_following"
                    />

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:orientation="vertical"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            />

        <LinearLayout
            android:layout_marginTop="@dimen/marginTopLinearLayoutNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_perfil_notifications"
                android:layout_weight="0.8"

                />
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"

                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            />


        <LinearLayout
            android:layout_marginTop="@dimen/marginTopLinearLayoutSync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_perfil_sync"
                android:layout_weight="0.5"
                />
            <Spinner
                android:id="@+id/perfil_spinner_sync_with"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"

                ></Spinner>

        </LinearLayout>



    </LinearLayout>






    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"

        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_perfil_btn_name"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"




            />
    </RelativeLayout>



</LinearLayout>
